# py-datagolf

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  test.py  test2.py  test_pydatagolf.py
datagolf/: __init__.py  api.py  common.py  golf_models.py  models.py  player.py  request.py  utils.py
examples/: tiered_pre_tournamant_preds.py  tiered_pre_tournamant_preds_2024_pga.py
examples/lookups/: pga_champ_2024.py  us_open_2024.py
resources/: api-documentation.md
scripts/: sample_responses.py
tests/: test_api.py  test_api_base_requests_json.py  test_base_requests_json.py
tests/fixtures/: api_responses_sample.json
